...
  const [loading, setLoading] = useState(true);
  const imageSource = getCardImage(props.imagesLarge);

  // Stage and Subtypes extraction
  let stage = "-";
  let subtypes = parseJsonStringArray(props.subtypes);
  const stageTypes = ["Basic", "Stage 1", "Stage 2"];
  const foundStage = subtypes.find((s) => stageTypes.includes(s));
  if (foundStage) stage = foundStage;
  const filteredSubtypes = subtypes.filter((s) => !stageTypes.includes(s));

  const renderCardTypes = () => {
    const types = parseJsonStringArray(props.types).filter((t) => t && t !== "…" && t !== "...");
...
    return (
      <ThemedText style={{ paddingBottom: 4 }}>
        <ThemedText
          fontWeight="bold"
          color={theme.colors.white}
        >
          Energy Type:{" "}
        </ThemedText>
        {types.join(", ")}
      </ThemedText>
    );
  };

...
          {/* Card Types */}
          <View style={styles.cardDetailsContainer}>
            <ThemedText
              type="h3"
              style={styles.title}
            >
              Card Type
            </ThemedText>
            <ThemedText style={{ paddingBottom: 4 }}>
              <ThemedText
                fontWeight="bold"
                color={theme.colors.white}
              >
                Type:{" "}
              </ThemedText>
              {props.supertype}
            </ThemedText>
            {filteredSubtypes.length > 0 && (
              <ThemedText style={{ paddingBottom: 4 }}>
                <ThemedText
                  fontWeight="bold"
                  color={theme.colors.white}
                >
                  Label:{" "}
                </ThemedText>
                {filteredSubtypes.join(", ")}
              </ThemedText>
            )}

            {renderCardTypes()}
...
              (props.rules && typeof props.rules === "string" && (props.rules as string).trim() !== "")) && (
              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h4"
                  style={styles.title}
                >
                  {props.supertype === "Pokémon" ? "Rule Box" : "Rules"}
                </ThemedText>

                {/* Display each rule in its own block if there are multiple rules */}
                {Array.isArray(props.rules) && props.rules.length > 0 ? (
                  props.rules.map((rule, index) => (
                    <ThemedText
...
          {props.attacks && props.attacks.length > 0 && (
            <View style={styles.cardDetailsContainer}>
              <ThemedText
                type="h3"
                style={styles.title}
              >
                Attacks
              </ThemedText>
              {props.attacks.map((atk, index) => (
                <View
                  key={`attack-${atk.name}-${atk.id}`}
                  style={{
                    marginBottom: index === (props.attacks ?? []).length - 1 ? 0 : theme.padding.medium,
...
          {props.abilities && props.abilities.length > 0 && (
            <View style={styles.cardDetailsContainer}>
              <ThemedText
                type="h3"
                style={styles.title}
              >
                Abilities
              </ThemedText>
              {props.abilities.map((ability, index) => (
                <View
                  key={`ability-${ability.name}`}
                  style={{
                    marginBottom: index === (props.abilities ?? []).length - 1 ? 0 : theme.padding.medium,
...
            <>
              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Stats
                </ThemedText>

                <ThemedText style={{ paddingBottom: 4 }}>
                  <ThemedText
                    fontWeight="bold"
                    color={theme.colors.white}
...

              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Evolution
                </ThemedText>
                <ThemedText style={{ paddingBottom: 4 }}>
                  <ThemedText
                    fontWeight="bold"
                    color={theme.colors.white}
                  >
...

              <View style={styles.cardDetailsContainer}>
                <ThemedText
                  type="h3"
                  style={styles.title}
                >
                  Weakness & Resistance
                </ThemedText>
                {(() => {
                  let weaknesses = parseJsonStringArray(props.weaknesses);
                  if (weaknesses.length > 0) {
                    return (
                      <ThemedText style={{ paddingBottom: 4 }}>
...

          <View style={styles.cardDetailsContainer}>
            <ThemedText
              type="h3"
              style={styles.title}
            >
              Card Set
            </ThemedText>
            {props.cardId && (
              <ThemedText style={{ paddingBottom: 4 }}>
                <ThemedText
                  fontWeight="bold"
                  color={theme.colors.white}
...
          {props.rarity || props.artist || props.flavorText ? (
            <View style={styles.cardDetailsContainer}>
              <ThemedText
                type="h3"
                style={styles.title}
              >
                Other Setails
              </ThemedText>
              {props.rarity && (
                <ThemedText style={{ paddingBottom: 4 }}>
                  <ThemedText
                    fontWeight="bold"
                    color={theme.colors.white}
...
