...
              </ThemedText>
            )}
          </Pressable>
          <ThemedModal
            visible={modalVisible}
            onClose={cancelSelection}
            buttonText="Cancel"
            buttonType="alternative"
            buttonSize="small"
            onConfirm={cancelSelection}
          >
            <View style={styles.modalContainer}>
              {options.map((option) => (
...
