...

  return (
    <>
      <ThemedButton
        type="main"
        size="small"
        title="Add to Deck"
        onPress={() => setModalVisible(true)}
        accessibilityLabel="Add to Deck"
      />
      <ThemedModal
        visible={modalVisible}
        onClose={() => setModalVisible(false)}
        onCancel={handleCancel}
        onConfirm={handleConfirmAndClose}
        buttonText="Add"
        disabled={addingDeckId !== null}
        onCancelText="Cancel"
      >
        <ThemedText
          type="h4"
          style={{ marginBottom: theme.padding.large, textAlign: "center" }}
        >
          Add{" "}
...
