...

  const handleAllImagesLoaded = useCallback(() => {}, [cardIds]);

  return (
    <ParallaxScrollView
      headerImage="advanced-search.webp"
      headerTitle="Search Results"
    >
      <ThemedView>
        <SearchResult
          cardIds={cardIds}
          cards={cards}
          query={query}
...
