...
    }
  };

  return (
    <ThemedView>
      <TextInput
        label="Free Search"
        value={cardSearch}
        onChange={setCardSearch}
        placeholder="Free text"
      />
      <ThemedText
        style={{ paddingTop: 8, paddingBottom: 24 }}
        type="default"
      >
        You can exclude database fields from the search by toggling them off.
...
          style={{ paddingLeft: 8 }}
        >
          Remove duplicates
        </ThemedText>
      </ThemedView>
      <ThemedButton
        title="Search"
        onPress={handleSubmit}
      />
    </ThemedView>
  );
}

