...
  };

  return (
    <ThemedModal
      visible={visible}
      onClose={onClose}
      buttonText="Set Filters"
      buttonType="main"
      buttonSize="large"
      onCancel={handleCancel}
    >
      <ThemedText
        type="h3"
        style={{ width: "100%", paddingBottom: theme.padding.medium }}
      >
        Attacks
      </ThemedText>
      <ThemedTextInput
        value={attacksName}
        onChange={setAttacksName}
        placeholder="Attack Name"
      />
...
