...
    setCardConvertedRetreatCostOperator("");
  };
  return (
    <ThemedModal
      visible={visible}
      onClose={onClose}
      buttonText="Set Filters"
      buttonType="main"
      buttonSize="large"
      onCancel={handleCancel}
    >
      <ThemedText
        type="h3"
        style={{ width: "100%", paddingBottom: theme.padding.medium }}
      >
        Stats
      </ThemedText>
      <ThemedNumberInput
        label="Pokèmon HP"
        value={cardHp}
        onChange={(val, op) => {
          setCardHp(val);
...
